Update Vampire plugin to version 3.1.0, enhancing configuration with detailed settings in CONFIG.md. Refactor command structure to include new gift commands and improve permission handling. Update Gradle dependencies and streamline build process. Remove deprecated classes and improve code organization for better maintainability.